@@ -27,5 +27,5 @@ recipe = zc.recipe.egg
 eggs =
     ${buildout:eggs}
     z3c.coverage
-scripts = coverage=coverage-report
+scripts = coveragereport
 arguments = ('coverage', 'coverage/report')
